--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Cheburek</title>
         <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-        <script src="scripts/pixi.js" type="text/javascript"></script>
+        <script src="scripts/pixi.min.js" type="text/javascript"></script>
         <script src="game.js" type="text/javascript"></script>
     </head>
     <body>
